feat<EnsinoService>: registerEnsino